# webmdx

./: .gitignore  CMakeLists.txt  LICENSE  ReadMe.md  Taskfile.yml  conanfile.py  vcpkg.json
.github/workflows/: release.yaml
cmake/: FindDav1d.cmake  FindOpus.cmake  FindVorbis.cmake  FindVpx.cmake  FindWebm.cmake  FindYuv.cmake  Findopus.cmake  Findvpx.cmake  Findwebm.cmake
include/webmd/: AudioCodec.h  AudioTrack.h  DecodeResult.h  FileSource.h  IAudioDecoder.h  IDecodedVideoFrame.h  ISource.h  IVideoDecoder.h  SourceDecoder.h  TrackType.h  VideoCodec.h  VideoTrack.h  defs.h  errors.h  utils.h
include/webmdx/: AudioCodec.h  AudioTrack.h  DecodeResult.h  DemuxResult.h  FileSource.h  IAudioDecoder.h  IDecodedVideoFrame.h  ISource.h  IVideoDecoder.h  Packet.h  SourceDecoder.h  TrackType.h  VideoCodec.h  VideoTrack.h  defs.h  errors.h  export.h  utils.h
lib/webmd/: BlockEntries.cpp  BlockEntries.h  BlockIterable.cpp  BlockIterable.h  FileSource.cpp  IAudioDecoder.cpp  ISource.cpp  IVideoDecoder.cpp  SourceDecoder.cpp  SourceDecoderImpl.cpp  SourceDecoderImpl.h  SourceReader.cpp  SourceReader.h  TrackPosition.cpp  TrackPosition.h  utils.cpp
lib/webmd/audio/: OpusDecoder.cpp  OpusDecoder.h  VorbisDecoder.cpp  VorbisDecoder.h
lib/webmd/video/: Av1Decoder.cpp  Av1Decoder.h  VpxDecoder.cpp  VpxDecoder.h
lib/webmdx/: BlockEntries.cpp  BlockEntries.h  FileSource.cpp  IAudioDecoder.cpp  ISource.cpp  IVideoDecoder.cpp  Packet.cpp  SourceDecoder.cpp  SourceDecoderImpl.cpp  SourceDecoderImpl.h  SourceReader.cpp  SourceReader.h  TrackPosition.cpp  TrackPosition.h  utils.cpp
lib/webmdx/audio/: OpusDecoder.cpp  OpusDecoder.h  VorbisDecoder.cpp  VorbisDecoder.h
lib/webmdx/video/: Av1Decoder.cpp  Av1Decoder.h  VpxDecoder.cpp  VpxDecoder.h
test/: NetworkSource.cpp  NetworkSource.h  main.cpp
